feat: 댓글 기능 추가

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,4 +35,12 @@ layout: main
       {% include disqus.html %}
     </div> <!-- End Wrap Content -->
   </div> <!-- End Page Content -->
+
+  <script src="https://utteranc.es/client.js"
+        repo="2021-pick-git/pick-git-comments"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+  </script>
 </article> <!-- End Article Page -->
